--- a/Tarea5/Makefile
+++ b/Tarea5/Makefile
@@ -8,7 +8,7 @@ TARGET = listaDoble
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o$
+	$(CC) $(CFLAGS) $(OBJS) -o $(TARGET)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
